user can not access private areas when not authenticated

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,9 +15,15 @@
 
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav ml-auto">
+                {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                    <li class="nav-item">
+                        <a class="nav-link sign-out" href="{{ path('logout') }}">{{ 'logout'|trans }}</a>
+                    </li>
+                {% else %}
                     <li class="nav-item">
                         <a class="nav-link sign-in" href="{{ path('login') }}">{{ 'login'|trans }}</a>
                     </li>
+                {% endif %}
                 </ul>
             </div>
         </div>
