--- a/templates/check/index.html.twig
+++ b/templates/check/index.html.twig
@@ -13,7 +13,11 @@
     <section class="checks">
 {% for report in reports.performance_reports %}
         <div class="check">
-            <h2>{{ report.check.name }}</h2>
+            <header>
+                <h2><a href="{{
+                    path('check_show', { 'slug': report.check.slug })
+                }}">{{ report.check.name }}</a></h2>
+            </header>
 
         </div>
 {% endfor %}
