show performance info in checks list

--- a/templates/check/index.html.twig
+++ b/templates/check/index.html.twig
@@ -17,8 +17,27 @@
                 <h2><a href="{{
                     path('check_show', { 'slug': report.check.slug })
                 }}">{{ report.check.name }}</a></h2>
+                <ul class="list-unstyled list-inline">
+                    <li>{{ 'check.status'|trans }}: {{ ('check.status.' ~ report.check.status.name)|trans }}</li>
+                    <li>{{ 'check.url'|trans }}: <code>{{ report.check.url.formatted }}</code></li>
+                </ul>
             </header>
 
+            <div class="performance">
+                <h3>{{ 'check.performance'|trans }}</h3>
+                <dl>
+                    <dt>{{ 'check.performance.uptime'|trans }}</dt>
+                    <dd>{{ report.performance.uptime.value|localizednumber('percent') }}</dd>
+
+                    <dt>{{ 'check.performance.average'|trans }}</dt>
+                    <dd>{{ report.performance.average.value|localizednumber }} ms</dd>
+
+                    <dt>{{ 'check.performance.percentile'|trans({
+                        '%percent%': report.performance.percentile.percent.value|localizednumber('percent')
+                    }) }}</dt>
+                    <dd>{{ report.performance.percentile.average.value|localizednumber }} ms</dd>
+                </dl>
+            </div>
         </div>
 {% endfor %}
     </section>
