show basic info about checks

--- a/templates/check/index.html.twig
+++ b/templates/check/index.html.twig
@@ -8,6 +8,7 @@
 <main>
     <header>
         <h1>{{ 'section.checks'|trans }}</h1>
+        <p class="subtitle">{% include 'check/include/date_range_name.html.twig' with { 'date_range': reports.date_range } %}</p>
     </header>
 
     <section class="checks">
