show check by customer

--- a/templates/check/index.html.twig
+++ b/templates/check/index.html.twig
@@ -7,7 +7,7 @@
 {% block body %}
 <main>
     <header>
-        <h1>{{ 'section.checks'|trans }}</h1>
+        <h1 class="header-title">{{ 'section.checks'|trans }}</h1>
         <p class="subtitle">{% include 'check/include/date_range_name.html.twig' with { 'date_range': reports.date_range } %}</p>
     </header>
 
