--- a/assets/css/_bootstrap.scss
+++ b/assets/css/_bootstrap.scss
@@ -1,5 +1,5 @@
 //
-// copied from "bootstrap/scss/bootstrap"
+// copied from "~bootstrap/scss/bootstrap"
 //
 
 @import "~bootstrap/scss/functions";
@@ -35,5 +35,5 @@
 // @import "~bootstrap/scss/tooltip";
 // @import "~bootstrap/scss/popover";
 // @import "~bootstrap/scss/carousel";
-// @import "~bootstrap/scss/utilities";
+@import "~bootstrap/scss/utilities";
 // @import "~bootstrap/scss/print";
