--- a/templates/check/show.html.twig
+++ b/templates/check/show.html.twig
@@ -5,7 +5,7 @@
 
 
 {% block body %}
-<main>
+<main class="container">
     <header>
         <h1 class="header-title">{{ summary.check.name }}</h1>
         <p class="subtitle"></p>
