--- a/templates/check/show.html.twig
+++ b/templates/check/show.html.twig
@@ -8,11 +8,37 @@
 <main class="container">
     <header>
         <h1 class="header-title">{{ summary.check.name }}</h1>
-        <p class="subtitle"></p>
+        <p class="subtitle">{% include 'check/include/date_range_name.html.twig' with {
+            'date_range': summary.measure_summary.date_range
+        } %}</p>
     </header>
 
     <section class="profile">
 
+        <div class="table-responsive">
+            <table class="table table-striped table-sm">
+                <caption>{{ 'check.measurements.caption'|trans }}</caption>
+                <thead class="">
+                <tr>
+                    <th>{{ 'measure.date.from'|trans }}</th>
+                    <th>{{ 'measure.date.to'|trans }}</th>
+                    <th>{{ 'measurement.result.duration'|trans }}</th>
+                    <th>{{ 'measurement.result.diff'|trans }}</th>
+                </tr>
+                </thead>
+
+                <tbody>
+                {% for average in summary.measure_summary.averages %}
+                    <tr>
+                        <td><time>{{ average.response_time.date_range.from|localizeddate('medium', 'short') }}</time></td>
+                        <td><time>{{ average.response_time.date_range.to|localizeddate('medium', 'short') }}</time></td>
+                        <td><span>{{ average.response_time.value|localizednumber }} ms</span></td>
+                        <td><span>{{ average.response_time.diff.value|localizednumber('percent', 'double') }}</span></td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
     </section>
 </main>
 {% endblock %}
