--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,5 +1,9 @@
 {% extends 'base.html.twig' %}
 
+
+{% block section 'login' %}
+
+
 {% block body %}
 <div class="container">
     <div class="row justify-content-center">
