--- a/templates/check/index.html.twig
+++ b/templates/check/index.html.twig
@@ -6,7 +6,8 @@
 
 
 {% block body %}
-<main class="container">
+<main>
+    <div class="container">
     <header>
         <h1 class="header-title">{{ 'section.checks'|trans }}</h1>
         <p class="subtitle">{% include 'check/include/date_range_name.html.twig' with { 'date_range': reports.date_range } %}</p>
@@ -43,5 +44,6 @@
         </div>
 {% endfor %}
     </section>
+    </div>
 </main>
 {% endblock %}
