--- a/templates/default/homepage.html.twig
+++ b/templates/default/homepage.html.twig
@@ -2,7 +2,9 @@
 
 
 {% block body %}
-<main class="container">
-    <p>Homepage</p>
+<main>
+    <div class="container">
+        <p>Homepage</p>
+    </div>
 </main>
 {% endblock %}
