--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -5,34 +5,36 @@
 
 
 {% block body %}
-<div class="container">
-    <div class="row justify-content-center">
-        <div class="col-sm-5">
-        {% if error %}
-            <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-        {% endif %}
+<main>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-sm-5">
+            {% if error %}
+                <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+            {% endif %}
 
-            <form action="{{ path('login_check') }}" method="post">
-                {#
-                <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-                #}
-                <fieldset>
-                    <legend>{{ 'login.legend'|trans }}</legend>
+                <form action="{{ path('login_check') }}" method="post">
+                    {#
+                    <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+                    #}
+                    <fieldset>
+                        <legend>{{ 'login.legend'|trans }}</legend>
 
-                    <div class="form-group">
-                        <label for="username">{{ 'login.username'|trans }}</label>
-                        <input type="text" class="form-control input-lg" id="username" name="_username" placeholder="user@example.com" required="required" value="{{ last_username }}">
-                    </div>
-                    <div class="form-group">
-                        <label for="password">{{ 'login.password'|trans }}</label>
-                        <input type="password" class="form-control input-lg" id="password" name="_password"  required="required" placeholder="">
-                    </div>
+                        <div class="form-group">
+                            <label for="username">{{ 'login.username'|trans }}</label>
+                            <input type="text" class="form-control input-lg" id="username" name="_username" placeholder="user@example.com" required="required" value="{{ last_username }}">
+                        </div>
+                        <div class="form-group">
+                            <label for="password">{{ 'login.password'|trans }}</label>
+                            <input type="password" class="form-control input-lg" id="password" name="_password"  required="required" placeholder="">
+                        </div>
 
-                    <button type="submit" class="btn btn-primary btn-block">{{ 'login.submit'|trans }}</button>
+                        <button type="submit" class="btn btn-primary btn-block">{{ 'login.submit'|trans }}</button>
 
-                </fieldset>
-            </form>
+                    </fieldset>
+                </form>
+            </div>
         </div>
     </div>
-</div>
+</main>
 {% endblock %}
