refactoring styles and tests

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -3,3 +3,15 @@
 
 @import "app_main";
 @import "app_footer";
+
+#skippy {
+  display: block;
+  padding: $spacer;
+  color: $white;
+  background-color: $dark;
+  outline: 0;
+}
+
+.my-form-actions {
+  padding-top: $spacer;
+}
