--- a/assets/css/_app_main.scss
+++ b/assets/css/_app_main.scss
@@ -3,3 +3,14 @@ body > main {
   padding-top: $spacer * 2;
   padding-bottom: $spacer * 2;
 }
+
+
+table {
+  thead,
+  tbody {
+    .my-tab-number,
+    .my-tab-currency {
+      text-align: right;
+    }
+  }
+}
