--- a/templates/include/navbar.html.twig
+++ b/templates/include/navbar.html.twig
@@ -1,7 +1,7 @@
 {% set _section = section is not empty ? section : 'dashboard' %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-        <a class="navbar-brand" href="{{ path('homepage') }}">{{ custom_app_name }}</a>
+        <a class="navbar-brand" href="{{ path('homepage') }}">{{ custom_app_name|title }}</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="{{ 'toggle.navigation'|trans }}">
             <span class="navbar-toggler-icon"></span>
         </button>
