--- a/templates/include/navbar.html.twig
+++ b/templates/include/navbar.html.twig
@@ -12,7 +12,7 @@
                     <a class="nav-link" href="{{ path('homepage') }}">{{ 'section.dashboard'|trans }}{% if _section == 'dashboard' %} <span class="sr-only">({{ 'link.current'|trans }})</span>{% endif %}</a>
                 {% endspaceless %}</li>
                 <li class="nav-item my-section-checks {{ _section == 'check' ? 'active' : '' }}">{% spaceless %}
-                    <a class="nav-link" href="{{ path('check_list') }}">{{ 'section.checks'|trans }}{% if _section == 'active' %} <span class="sr-only">({{ 'link.current'|trans }})</span>{% endif %}</a>
+                    <a class="nav-link" href="{{ path('check_list') }}">{{ 'section.checks'|trans }}{% if _section == 'check' %} <span class="sr-only">({{ 'link.current'|trans }})</span>{% endif %}</a>
                 {% endspaceless %}</li>
             </ul>
             {% endif %}
